--- a/.github/workflows/test_flow.yml
+++ b/.github/workflows/test_flow.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Echo a string
         run: echo "Hello World!!!"
 
+      - name: Echo a string
+        run: echo "Hello World again"
+
       - name: Multiline script
         run: |
           node -v
