--- a/.github/workflows/test_flow.yml
+++ b/.github/workflows/test_flow.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Echo a string
         run: echo "Hello World 2!!!"
 
+      - name: Echo a string
+        run: echo "Hello World 3!!!"
+
       - name: Multiline script
         run: |
           node -v
